tests/fixtures/invalid/pow_int_dict_set.py
# Cannot call pow() with Int, Dict[str, int], Set[int]
x = pow(1, {"a": 1}, {1, 2, 3})
